parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> simple_statement SEMICOLON
Rule 5     statement -> SEMICOLON
Rule 6     simple_statement -> PASS
Rule 7     simple_statement -> NAME = expression
Rule 8     simple_statement -> SAY ( expression )
Rule 9     expression -> expression + expression
Rule 10    expression -> expression - expression
Rule 11    expression -> expression * expression
Rule 12    expression -> expression / expression
Rule 13    expression -> expression ^ expression
Rule 14    expression -> - expression
Rule 15    expression -> + expression
Rule 16    expression -> ( expression )
Rule 17    expression -> NUMBER
Rule 18    expression -> DQ_STRING
Rule 19    expression -> SQ_STRING
Rule 20    expression -> NAME

Terminals, with rules where they appear

(                    : 8 16
)                    : 8 16
*                    : 11
+                    : 9 15
-                    : 10 14
/                    : 12
=                    : 7
DQ_STRING            : 18
NAME                 : 7 20
NUMBER               : 17
PASS                 : 6
SAY                  : 8
SEMICOLON            : 4 5
SQ_STRING            : 19
^                    : 13
error                : 

Nonterminals, with rules where they appear

expression           : 7 8 9 9 10 10 11 11 12 12 13 13 14 15 16
program              : 0
simple_statement     : 4
statement            : 2 3
statement_list       : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . simple_statement SEMICOLON
    (5) statement -> . SEMICOLON
    (6) simple_statement -> . PASS
    (7) simple_statement -> . NAME = expression
    (8) simple_statement -> . SAY ( expression )

    SEMICOLON       shift and go to state 5
    PASS            shift and go to state 6
    NAME            shift and go to state 7
    SAY             shift and go to state 8

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    simple_statement               shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . simple_statement SEMICOLON
    (5) statement -> . SEMICOLON
    (6) simple_statement -> . PASS
    (7) simple_statement -> . NAME = expression
    (8) simple_statement -> . SAY ( expression )

    $end            reduce using rule 1 (program -> statement_list .)
    SEMICOLON       shift and go to state 5
    PASS            shift and go to state 6
    NAME            shift and go to state 7
    SAY             shift and go to state 8

    statement                      shift and go to state 9
    simple_statement               shift and go to state 4

state 3

    (3) statement_list -> statement .

    SEMICOLON       reduce using rule 3 (statement_list -> statement .)
    PASS            reduce using rule 3 (statement_list -> statement .)
    NAME            reduce using rule 3 (statement_list -> statement .)
    SAY             reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> simple_statement . SEMICOLON

    SEMICOLON       shift and go to state 10


state 5

    (5) statement -> SEMICOLON .

    SEMICOLON       reduce using rule 5 (statement -> SEMICOLON .)
    PASS            reduce using rule 5 (statement -> SEMICOLON .)
    NAME            reduce using rule 5 (statement -> SEMICOLON .)
    SAY             reduce using rule 5 (statement -> SEMICOLON .)
    $end            reduce using rule 5 (statement -> SEMICOLON .)


state 6

    (6) simple_statement -> PASS .

    SEMICOLON       reduce using rule 6 (simple_statement -> PASS .)


state 7

    (7) simple_statement -> NAME . = expression

    =               shift and go to state 11


state 8

    (8) simple_statement -> SAY . ( expression )

    (               shift and go to state 12


state 9

    (2) statement_list -> statement_list statement .

    SEMICOLON       reduce using rule 2 (statement_list -> statement_list statement .)
    PASS            reduce using rule 2 (statement_list -> statement_list statement .)
    NAME            reduce using rule 2 (statement_list -> statement_list statement .)
    SAY             reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 10

    (4) statement -> simple_statement SEMICOLON .

    SEMICOLON       reduce using rule 4 (statement -> simple_statement SEMICOLON .)
    PASS            reduce using rule 4 (statement -> simple_statement SEMICOLON .)
    NAME            reduce using rule 4 (statement -> simple_statement SEMICOLON .)
    SAY             reduce using rule 4 (statement -> simple_statement SEMICOLON .)
    $end            reduce using rule 4 (statement -> simple_statement SEMICOLON .)


state 11

    (7) simple_statement -> NAME = . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 14

state 12

    (8) simple_statement -> SAY ( . expression )
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 21

state 13

    (20) expression -> NAME .

    +               reduce using rule 20 (expression -> NAME .)
    -               reduce using rule 20 (expression -> NAME .)
    *               reduce using rule 20 (expression -> NAME .)
    /               reduce using rule 20 (expression -> NAME .)
    ^               reduce using rule 20 (expression -> NAME .)
    SEMICOLON       reduce using rule 20 (expression -> NAME .)
    )               reduce using rule 20 (expression -> NAME .)


state 14

    (7) simple_statement -> NAME = expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    SEMICOLON       reduce using rule 7 (simple_statement -> NAME = expression .)
    +               shift and go to state 22
    -               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 25
    ^               shift and go to state 26


state 15

    (15) expression -> + . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 27

state 16

    (14) expression -> - . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 28

state 17

    (16) expression -> ( . expression )
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 29

state 18

    (17) expression -> NUMBER .

    +               reduce using rule 17 (expression -> NUMBER .)
    -               reduce using rule 17 (expression -> NUMBER .)
    *               reduce using rule 17 (expression -> NUMBER .)
    /               reduce using rule 17 (expression -> NUMBER .)
    ^               reduce using rule 17 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 17 (expression -> NUMBER .)
    )               reduce using rule 17 (expression -> NUMBER .)


state 19

    (18) expression -> DQ_STRING .

    +               reduce using rule 18 (expression -> DQ_STRING .)
    -               reduce using rule 18 (expression -> DQ_STRING .)
    *               reduce using rule 18 (expression -> DQ_STRING .)
    /               reduce using rule 18 (expression -> DQ_STRING .)
    ^               reduce using rule 18 (expression -> DQ_STRING .)
    SEMICOLON       reduce using rule 18 (expression -> DQ_STRING .)
    )               reduce using rule 18 (expression -> DQ_STRING .)


state 20

    (19) expression -> SQ_STRING .

    +               reduce using rule 19 (expression -> SQ_STRING .)
    -               reduce using rule 19 (expression -> SQ_STRING .)
    *               reduce using rule 19 (expression -> SQ_STRING .)
    /               reduce using rule 19 (expression -> SQ_STRING .)
    ^               reduce using rule 19 (expression -> SQ_STRING .)
    SEMICOLON       reduce using rule 19 (expression -> SQ_STRING .)
    )               reduce using rule 19 (expression -> SQ_STRING .)


state 21

    (8) simple_statement -> SAY ( expression . )
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    )               shift and go to state 30
    +               shift and go to state 22
    -               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 25
    ^               shift and go to state 26


state 22

    (9) expression -> expression + . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 31

state 23

    (10) expression -> expression - . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 32

state 24

    (11) expression -> expression * . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 33

state 25

    (12) expression -> expression / . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 34

state 26

    (13) expression -> expression ^ . expression
    (9) expression -> . expression + expression
    (10) expression -> . expression - expression
    (11) expression -> . expression * expression
    (12) expression -> . expression / expression
    (13) expression -> . expression ^ expression
    (14) expression -> . - expression
    (15) expression -> . + expression
    (16) expression -> . ( expression )
    (17) expression -> . NUMBER
    (18) expression -> . DQ_STRING
    (19) expression -> . SQ_STRING
    (20) expression -> . NAME

    -               shift and go to state 16
    +               shift and go to state 15
    (               shift and go to state 17
    NUMBER          shift and go to state 18
    DQ_STRING       shift and go to state 19
    SQ_STRING       shift and go to state 20
    NAME            shift and go to state 13

    expression                     shift and go to state 35

state 27

    (15) expression -> + expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    +               reduce using rule 15 (expression -> + expression .)
    -               reduce using rule 15 (expression -> + expression .)
    *               reduce using rule 15 (expression -> + expression .)
    /               reduce using rule 15 (expression -> + expression .)
    ^               reduce using rule 15 (expression -> + expression .)
    SEMICOLON       reduce using rule 15 (expression -> + expression .)
    )               reduce using rule 15 (expression -> + expression .)

  ! +               [ shift and go to state 22 ]
  ! -               [ shift and go to state 23 ]
  ! *               [ shift and go to state 24 ]
  ! /               [ shift and go to state 25 ]
  ! ^               [ shift and go to state 26 ]


state 28

    (14) expression -> - expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    +               reduce using rule 14 (expression -> - expression .)
    -               reduce using rule 14 (expression -> - expression .)
    *               reduce using rule 14 (expression -> - expression .)
    /               reduce using rule 14 (expression -> - expression .)
    ^               reduce using rule 14 (expression -> - expression .)
    SEMICOLON       reduce using rule 14 (expression -> - expression .)
    )               reduce using rule 14 (expression -> - expression .)

  ! +               [ shift and go to state 22 ]
  ! -               [ shift and go to state 23 ]
  ! *               [ shift and go to state 24 ]
  ! /               [ shift and go to state 25 ]
  ! ^               [ shift and go to state 26 ]


state 29

    (16) expression -> ( expression . )
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    )               shift and go to state 36
    +               shift and go to state 22
    -               shift and go to state 23
    *               shift and go to state 24
    /               shift and go to state 25
    ^               shift and go to state 26


state 30

    (8) simple_statement -> SAY ( expression ) .

    SEMICOLON       reduce using rule 8 (simple_statement -> SAY ( expression ) .)


state 31

    (9) expression -> expression + expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    +               reduce using rule 9 (expression -> expression + expression .)
    -               reduce using rule 9 (expression -> expression + expression .)
    SEMICOLON       reduce using rule 9 (expression -> expression + expression .)
    )               reduce using rule 9 (expression -> expression + expression .)
    *               shift and go to state 24
    /               shift and go to state 25
    ^               shift and go to state 26

  ! *               [ reduce using rule 9 (expression -> expression + expression .) ]
  ! /               [ reduce using rule 9 (expression -> expression + expression .) ]
  ! ^               [ reduce using rule 9 (expression -> expression + expression .) ]
  ! +               [ shift and go to state 22 ]
  ! -               [ shift and go to state 23 ]


state 32

    (10) expression -> expression - expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    +               reduce using rule 10 (expression -> expression - expression .)
    -               reduce using rule 10 (expression -> expression - expression .)
    SEMICOLON       reduce using rule 10 (expression -> expression - expression .)
    )               reduce using rule 10 (expression -> expression - expression .)
    *               shift and go to state 24
    /               shift and go to state 25
    ^               shift and go to state 26

  ! *               [ reduce using rule 10 (expression -> expression - expression .) ]
  ! /               [ reduce using rule 10 (expression -> expression - expression .) ]
  ! ^               [ reduce using rule 10 (expression -> expression - expression .) ]
  ! +               [ shift and go to state 22 ]
  ! -               [ shift and go to state 23 ]


state 33

    (11) expression -> expression * expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    +               reduce using rule 11 (expression -> expression * expression .)
    -               reduce using rule 11 (expression -> expression * expression .)
    *               reduce using rule 11 (expression -> expression * expression .)
    /               reduce using rule 11 (expression -> expression * expression .)
    SEMICOLON       reduce using rule 11 (expression -> expression * expression .)
    )               reduce using rule 11 (expression -> expression * expression .)
    ^               shift and go to state 26

  ! ^               [ reduce using rule 11 (expression -> expression * expression .) ]
  ! +               [ shift and go to state 22 ]
  ! -               [ shift and go to state 23 ]
  ! *               [ shift and go to state 24 ]
  ! /               [ shift and go to state 25 ]


state 34

    (12) expression -> expression / expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    +               reduce using rule 12 (expression -> expression / expression .)
    -               reduce using rule 12 (expression -> expression / expression .)
    *               reduce using rule 12 (expression -> expression / expression .)
    /               reduce using rule 12 (expression -> expression / expression .)
    SEMICOLON       reduce using rule 12 (expression -> expression / expression .)
    )               reduce using rule 12 (expression -> expression / expression .)
    ^               shift and go to state 26

  ! ^               [ reduce using rule 12 (expression -> expression / expression .) ]
  ! +               [ shift and go to state 22 ]
  ! -               [ shift and go to state 23 ]
  ! *               [ shift and go to state 24 ]
  ! /               [ shift and go to state 25 ]


state 35

    (13) expression -> expression ^ expression .
    (9) expression -> expression . + expression
    (10) expression -> expression . - expression
    (11) expression -> expression . * expression
    (12) expression -> expression . / expression
    (13) expression -> expression . ^ expression

    +               reduce using rule 13 (expression -> expression ^ expression .)
    -               reduce using rule 13 (expression -> expression ^ expression .)
    *               reduce using rule 13 (expression -> expression ^ expression .)
    /               reduce using rule 13 (expression -> expression ^ expression .)
    ^               reduce using rule 13 (expression -> expression ^ expression .)
    SEMICOLON       reduce using rule 13 (expression -> expression ^ expression .)
    )               reduce using rule 13 (expression -> expression ^ expression .)

  ! +               [ shift and go to state 22 ]
  ! -               [ shift and go to state 23 ]
  ! *               [ shift and go to state 24 ]
  ! /               [ shift and go to state 25 ]
  ! ^               [ shift and go to state 26 ]


state 36

    (16) expression -> ( expression ) .

    +               reduce using rule 16 (expression -> ( expression ) .)
    -               reduce using rule 16 (expression -> ( expression ) .)
    *               reduce using rule 16 (expression -> ( expression ) .)
    /               reduce using rule 16 (expression -> ( expression ) .)
    ^               reduce using rule 16 (expression -> ( expression ) .)
    SEMICOLON       reduce using rule 16 (expression -> ( expression ) .)
    )               reduce using rule 16 (expression -> ( expression ) .)

